# meeting-asr

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  config.example.json  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
app/: oss_lifecycle.py  postprocess.py  uploader.py
docs/: architecture.md  cli-user-guide.md  developer-guide.md  polish-eval.md  project-introduction.md  quick-start.md  release.md  tui-testing.md  web-ui.md
evals/: _log.py  apply_audio_corrections.py  assemble_gold.py  audio_verify.py  build_review_file.py  codex_judge_variance.py  codex_quality_judge.py  codex_review.py  divergence_denominator.py  extract_polish_cases.py  model_compare.py  model_cost_compare.py  polish_cases.jsonl  polish_scoreboard.py  reapply_lexicon.py  restore_eval.py  scan_residual_noise.py  verify_destutter_audio.py
scripts/: install-tool.sh  measure_summary_diff.py
src/app/: __init__.py  agent_guide.py  asr_client.py  asr_hotwords.py  asr_metrics.py  asr_models.py  asr_pricing.py  asr_wait.py  cli.py  cli_errors.py  cli_ui.py  completion_helpers.py  config.py  correction_editor.py  correction_hotwords.py  correction_llm.py  correction_proposals.py  correction_types.py  correction_understanding.py  dashscope_chat.py  ffmpeg_utils.py  lexicon_models.py  lexicon_store.py  meeting_summary.py  models.py  object_ids.py  oss_lifecycle.py  polish_evaluation.py  postprocess.py  project_manager.py  project_trash.py  project_tui.py  residual_noise.py  sentence_locator.py  sentence_reassignment.py  speaker_clip_embeddings.py  speaker_cluster_quality.py  speaker_crosstalk.py  speaker_labeling.py  speaker_learning.py  (+29 more)
src/app/commands/: __init__.py  agent.py  audio.py  completion.py  config.py  doctor.py  lexicon.py  oss.py  paths.py  project.py  project_correct.py  project_trash.py  transcript.py  voiceprint.py  web.py
src/app/core/: asr_metrics.py  asr_wait.py  oss_metrics.py  oss_upload.py  progress.py  project_artifacts.py  project_models.py  project_refs.py  project_workflow.py  run_pipeline.py  speaker_review_service.py  voiceprint_review_service.py
src/app/infra/: campplus.py  dashscope_asr.py  ffmpeg.py
src/app/presentation/: time_format.py
src/app/presentation/cli/: asr_wait_progress.py  doctor.py  errors.py  help.py  i18n.py  json_output.py  output.py  plain.py  progress.py  project_list.py  project_payloads.py  project_run_summary.py  project_show.py  speaker_match_table.py  typer_context.py  voiceprint_health.py  voiceprint_quality.py
src/app/presentation/tui/: clipboard.py  diff_render.py  i18n.py  inputs.py  project.py  speaker.py  speaker_correction.py  speaker_help.py  speaker_identity.py  speaker_matches.py  speaker_models.py  speaker_people.py  speaker_rematch.py  speaker_save.py  speaker_session.py  speaker_status.py  speaker_summary.py  speaker_timeline.py  voiceprint.py  voiceprint_capture.py  voiceprint_quality.py  voiceprint_review.py  voiceprint_review_context.py  voiceprint_review_render.py  voiceprint_review_text.py  voiceprint_review_workflow.py
src/app/web/: __init__.py  deps.py  errors.py  jobs.py  locks.py  progress_bridge.py  schemas.py  server.py  settings.py
src/app/web/routers/: __init__.py  audio.py  config.py  corrections.py  jobs.py  lexicon.py  pipeline.py  projects.py  speakers.py  voiceprints.py
tests/: conftest.py  test_agent_contract.py  test_asr_client.py  test_asr_hotwords.py  test_asr_metrics.py  test_asr_pricing.py  test_audio_verify_page.py  test_build_hook.py  test_campplus.py  test_capture_registry.py  test_cli_errors.py  test_cli_output.py  test_cli_ui.py  test_completion.py  test_config.py  test_correction_llm.py  test_dashscope_chat.py  test_doctor.py  test_gold_source.py  test_ignored_speaker_observability.py  test_install_script.py  test_lexicon_command.py  test_meeting_summary.py  test_oss_lifecycle.py  test_oss_metrics.py  test_polish_evaluation.py  test_polish_guard.py  test_polish_residual_dimension.py  test_postprocess.py  test_project_correct.py  test_project_manager.py  test_project_multi_input.py  test_project_oss_upload.py  test_project_sentence_cli.py  test_project_show.py  test_project_trash.py  test_project_tui.py  test_project_workflow.py  test_residual_noise.py  test_root_commands.py  (+36 more)
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
web/src/api/: client.ts
web/src/components/: AppVersion.tsx  AuthGate.tsx  ConfirmHost.tsx  ExportsModal.tsx  IdentityPicker.tsx  JobProgress.tsx  JobsCenter.tsx  Modal.tsx  PendingCaptureBanner.tsx  PromptHost.tsx  SeekBar.tsx  SpeakerPicker.tsx
web/src/lib/: auth.ts  confirm.ts  globalError.ts  i18n.ts  jobs.ts  prompt.ts  textDiff.ts  unsavedGuard.ts  useClipAudio.ts  useJobStream.ts
web/src/pages/: CapturePage.tsx  CorrectionPage.tsx  LexiconPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  SpeakerReviewPage.tsx  VoiceprintPage.tsx
