[project]
name = "meeting-asr"
version = "0.5.0"
description = "Project-based CLI for Alibaba Cloud DashScope Fun-ASR video transcription."
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Ruohan Chen" },
]
dependencies = [
  "dashscope>=1.20.14",
  "oss2>=2.19.1",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "rich>=15.0.0",
  "speechbrain>=1.0.3",
  "textual>=8.2.5",
  "torch>=2.9.0",
  "torchaudio>=2.9.0",
  "typer>=0.12.5",
]

[project.scripts]
meeting-asr = "app.cli:main"

[project.urls]
Homepage = "https://github.com/crhan/meeting-asr"
Repository = "https://github.com/crhan/meeting-asr"
Issues = "https://github.com/crhan/meeting-asr/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "src/**/*.py" },
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.15.12",
]
