[project]
name = "meeting-asr"
version = "0.11.0"
description = "Project-based CLI for Alibaba Cloud DashScope Fun-ASR video transcription."
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Ruohan Chen" },
]
dependencies = [
  "dashscope>=1.20.14",
  "oss2>=2.19.1",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "rich>=15.0.0",
  "speechbrain>=1.0.3",
  "textual>=8.2.5",
  "torch>=2.9.0",
  "torchaudio>=2.9.0",
  "typer>=0.26",
]

[project.scripts]
meeting-asr = "app.cli:main"

[project.urls]
Homepage = "https://github.com/crhan/meeting-asr"
Repository = "https://github.com/crhan/meeting-asr"
Issues = "https://github.com/crhan/meeting-asr/issues"

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1",
    "uvicorn[standard]>=0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

# The React SPA is built into src/app/web/static (gitignored build artifact). Force-include
# it so the wheel ships the web UI; the build hook below ensures it exists first.
[tool.hatch.build.targets.wheel.force-include]
"src/app/web/static" = "app/web/static"

# Build the SPA at wheel-build time if it isn't already built (e.g. CI / release).
[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "src/**/*.py" },
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.15.12",
  "structlog>=25.5.0",
]
