[project]
name = "meeting-asr"
version = "0.14.0"
description = "Project-based CLI for Alibaba Cloud DashScope Fun-ASR video transcription."
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Ruohan Chen" },
]
dependencies = [
  "dashscope>=1.20.14",
  "fastapi>=0.115",
  "oss2>=2.19.1",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.12",
  "pydantic>=2.10",
  "requests>=2.32.3",
  "rich>=15.0.0",
  "speechbrain>=1.0.3",
  "sse-starlette>=2.1",
  "textual>=8.2.5",
  "torch>=2.9.0",
  "torchaudio>=2.9.0",
  "typer>=0.26",
  "uvicorn[standard]>=0.34",
]

[project.scripts]
meeting-asr = "app.cli:main"

[project.urls]
Homepage = "https://github.com/crhan/meeting-asr"
Repository = "https://github.com/crhan/meeting-asr"
Issues = "https://github.com/crhan/meeting-asr/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

# The React SPA (src/app/web/static, a gitignored Vite build) is shipped into the wheel by
# hatch_build.py via a *conditional* force-include -- only when the assets exist -- so a base
# CLI build with no SPA succeeds instead of failing on a missing force-include path. The
# hook also builds the SPA when MEETING_ASR_BUILD_WEB=1 (CI / release / explicit web install).
[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "src/**/*.py" },
  # The wheel also force-includes the built React SPA and is shaped by the build hook, so a
  # web-only change (or a fresh `npm run build`) must bust uv's cached local-package wheel --
  # otherwise `uv tool install .` / install-tool.sh --wheel reuses a stale or SPA-less wheel.
  # Watching the static build *output* alone is not enough: uv decides cache reuse BEFORE the
  # build hook runs, and on a --wheel install the hook is what would refresh static. The SPA
  # *sources* (web/) and the build flag itself must therefore be part of the key, or an
  # edit-web-src -> install-tool.sh --wheel cycle keeps serving the previously cached wheel.
  { file = "hatch_build.py" },
  { file = "src/app/web/static/**/*" },
  { file = "web/src/**/*" },
  { file = "web/index.html" },
  { file = "web/package.json" },
  { file = "web/package-lock.json" },
  { file = "web/vite.config.ts" },
  { file = "web/tsconfig.json" },
  { env = "MEETING_ASR_BUILD_WEB" },
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.15.12",
  "structlog>=25.5.0",
]
